test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_parse/malformed_array_declarator_3.plx
pub fn main(none) i32 {
    # array size specifier must follow identifier
    arr: i32[3] = $(1, 2, 3)
    return 0
}
